<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/subscriptions">

        <Preference
            android:icon="@drawable/ic_download_filled"
            android:summary="@string/import_from_yt_summary"
            app:key="import_subscriptions"
            app:title="@string/import_from_yt" />

        <Preference
            android:icon="@drawable/ic_upload"
            app:key="export_subscriptions"
            app:title="@string/export_subscriptions" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/playlists">

        <Preference
            android:icon="@drawable/ic_download_filled"
            app:key="import_playlists"
            app:title="@string/import_playlists" />

        <Preference
            android:icon="@drawable/ic_upload"
            app:key="export_playlists"
            app:title="@string/export_playlists" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/channel_groups">

        <Preference
            android:icon="@drawable/ic_download_filled"
            app:key="import_groups"
            app:title="@string/import_groups" />

        <Preference
            android:icon="@drawable/ic_upload"
            app:key="export_groups"
            app:title="@string/export_groups" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/app_backup">

        <Preference
            android:icon="@drawable/ic_backup"
            app:key="backup"
            app:title="@string/backup" />

        <Preference
            android:icon="@drawable/ic_restore"
            app:key="restore"
            app:title="@string/restore" />

    </PreferenceCategory>

</PreferenceScreen>