<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/data_synchronization">
        <com.github.libretube.ui.views.ButtonGroupPreference
            android:icon="@drawable/ic_region"
            android:title="@string/sync_server_type"
            android:key="sync_server"
            app:defaultValue="none"
            app:optionEntries="@array/syncProvider"
            app:optionValues="@array/syncProviderValue" />

        <ListPreference
            android:icon="@drawable/ic_server"
            app:defaultValue="https://pipedapi.kavin.rocks"
            app:key="selectAuthInstance"
            app:title="@string/auth_instances" />

        <EditTextPreference
            app:icon="@drawable/ic_server"
            app:defaultValue="https://sync.libretube.dev"
            app:key="libretube_sync_server_url"
            app:title="@string/sync_server_url"
            app:useSimpleSummaryProvider="true"/>

        <Preference
            android:icon="@drawable/ic_login_filled"
            app:key="login_register"
            app:title="@string/login_register" />

        <Preference
            android:icon="@drawable/ic_login_filled"
            app:isPreferenceVisible="false"
            app:key="logout"
            app:title="@string/logout" />

        <Preference
            android:icon="@drawable/ic_reset"
            app:key="delete_account"
            app:title="@string/deleteAccount" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/history">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_history_filled"
            android:summary="@string/search_history_summary"
            app:key="search_history_toggle"
            app:title="@string/search_history" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_time_outlined"
            android:summary="@string/watch_history_summary"
            app:key="watch_history_toggle"
            app:title="@string/watch_history" />

        <ListPreference
            android:defaultValue="always"
            android:entries="@array/watchPosition"
            android:entryValues="@array/watchPositionValues"
            android:icon="@drawable/ic_play_filled"
            app:key="watch_positions"
            app:title="@string/watch_positions_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>