<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/mode_of_operation">

        <com.github.libretube.ui.views.ButtonGroupPreference
            android:icon="@drawable/ic_region"
            android:title="@string/load_data_from"
            android:key="youtube_data_source"
            app:defaultValue="local"
            app:optionValues="@array/loadDataFromValue"
            app:optionEntries="@array/loadDataFrom" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_dislike"
            android:summary="@string/local_ryd_summary"
            android:title="@string/local_ryd"
            app:key="local_return_youtube_dislikes" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/instance" app:key="instance_category">

        <ListPreference
            android:icon="@drawable/ic_server"
            app:defaultValue="https://pipedapi.kavin.rocks"
            app:key="selectInstance"
            app:title="@string/instances" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/data_synchronization">
        <com.github.libretube.ui.views.ButtonGroupPreference
            android:icon="@drawable/ic_region"
            android:title="@string/sync_server_type"
            android:key="sync_server"
            app:defaultValue="none"
            app:optionEntries="@array/syncProvider"
            app:optionValues="@array/syncProviderValue" />

        <ListPreference
            android:icon="@drawable/ic_server"
            app:defaultValue="https://pipedapi.kavin.rocks"
            app:key="selectAuthInstance"
            app:title="@string/auth_instances" />

        <EditTextPreference
            app:icon="@drawable/ic_server"
            app:defaultValue="https://sync.libretube.dev"
            app:key="libretube_sync_server_url"
            app:title="@string/sync_server_url"
            app:useSimpleSummaryProvider="true"/>

        <Preference
            android:icon="@drawable/ic_login_filled"
            app:key="login_register"
            app:title="@string/login_register" />

        <Preference
            android:icon="@drawable/ic_login_filled"
            app:isPreferenceVisible="false"
            app:key="logout"
            app:title="@string/logout" />

        <Preference
            android:icon="@drawable/ic_reset"
            app:key="delete_account"
            app:title="@string/deleteAccount" />

    </PreferenceCategory>

</PreferenceScreen>