<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/search_history">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_history_filled"
            android:summary="@string/search_history_summary"
            app:key="search_history_toggle"
            app:title="@string/search_history" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:dependency="search_history_toggle"
            android:icon="@drawable/ic_search"
            app:key="unlimited_search_history"
            app:title="@string/unlimited_search_history" />

        <Preference
            android:icon="@drawable/ic_trash"
            app:key="clear_search_history"
            app:title="@string/clear_history" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/watch_history">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_time_outlined"
            android:summary="@string/watch_history_summary"
            app:key="watch_history_toggle"
            app:title="@string/watch_history" />

        <ListPreference
            android:defaultValue="100"
            android:dependency="watch_history_toggle"
            android:entries="@array/historySize"
            android:entryValues="@array/historySizeValues"
            android:icon="@drawable/ic_list"
            app:key="watch_history_size"
            app:title="@string/history_size"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:icon="@drawable/ic_trash"
            app:key="clear_watch_history"
            app:title="@string/clear_history" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/watch_positions_title">

        <ListPreference
            android:defaultValue="always"
            android:entries="@array/watchPosition"
            android:entryValues="@array/watchPositionValues"
            android:icon="@drawable/ic_play_filled"
            app:key="watch_positions"
            app:summary="@string/watch_positions_summary"
            app:title="@string/watch_positions" />

        <Preference
            android:icon="@drawable/ic_reset"
            app:key="clear_watch_positions"
            app:title="@string/reset_watch_positions" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/bookmarks">

        <Preference
            android:title="@string/clear_bookmarks"
            app:icon="@drawable/ic_bookmark"
            app:key="clear_bookmarks" />

    </PreferenceCategory>

</PreferenceScreen>