<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.SwitchPreferenceCompat
        app:isPreferenceVisible="false"
        app:key="darkMode"
        app:title="Toggle dark mode" />

    <ListPreference
        android:icon="@drawable/ic_language"
        app:defaultValue="US"
        app:entries="@array/regions"
        app:entryValues="@array/regionsValue"
        app:key="region"
        app:title="@string/region"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:icon="@drawable/ic_server"
        app:defaultValue="https://pipedapi.kavin.rocks/"
        app:entries="@array/instances"
        app:entryValues="@array/instancesValue"
        app:key="instance"
        app:title="@string/instances" />

    <androidx.preference.EditTextPreference
        app:isPreferenceVisible="false"
        app:key="customInstance"
        app:title="@string/customInstance" />

    <androidx.preference.Preference
        android:icon="@drawable/ic_login"
        android:summary="@string/notgmail"
        app:key="login_register"
        app:title="@string/login_register" />

    <androidx.preference.Preference
        android:hint="This is my hint"
        android:icon="@drawable/ic_import"
        android:summary=""
        app:key="import_from_yt"
        app:title="@string/import_from_yt" />

    <ListPreference
        android:icon="@drawable/ic_theme"
        app:defaultValue="A"
        app:entries="@array/themes"
        app:entryValues="@array/themesValue"
        app:key="theme_togglee"
        app:title="@string/app_theme" />

    <ListPreference
        android:icon="@drawable/ic_hd"
        app:defaultValue=""
        app:entries="@array/defres"
        app:entryValues="@array/defres"
        app:key="default_res"
        app:title="@string/defres"
        app:useSimpleSummaryProvider="true" />
</androidx.preference.PreferenceScreen>
