<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/startpage" />

    <item
        android:id="@+id/subscriptionsFragment"
        android:icon="@drawable/ic_subscriptions"
        android:title="@string/subscriptions" />

    <item
        android:id="@+id/libraryFragment"
        android:icon="@drawable/ic_library"
        android:title="@string/library" />

    <item
        android:id="@+id/downloadsFragment"
        android:visible="false"
        android:icon="@drawable/ic_download_filled"
        android:title="@string/downloads" />

    <item
        android:id="@+id/watchHistoryFragment"
        android:visible="false"
        android:icon="@drawable/ic_history_filled"
        android:title="@string/history" />

</menu>