<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="7dp"
    android:paddingVertical="10dp">

    <TextView
        android:id="@+id/quality"
        style="@style/BottomSheetItem"
        android:text="@string/quality"
        app:drawableStartCompat="@drawable/ic_hd" />

    <TextView
        android:id="@+id/playbackSpeed"
        style="@style/BottomSheetItem"
        android:text="@string/playback_speed"
        app:drawableStartCompat="@drawable/ic_speed" />

    <TextView
        android:id="@+id/captions"
        style="@style/BottomSheetItem"
        android:text="@string/captions"
        app:drawableStartCompat="@drawable/ic_caption" />

    <TextView
        android:id="@+id/autoplay"
        style="@style/BottomSheetItem"
        android:text="@string/player_autoplay"
        app:drawableStartCompat="@drawable/ic_play" />

    <TextView
        android:id="@+id/repeatMode"
        style="@style/BottomSheetItem"
        android:text="@string/repeat_mode"
        app:drawableStartCompat="@drawable/ic_repeat" />

    <TextView
        android:id="@+id/resizeMode"
        style="@style/BottomSheetItem"
        android:text="@string/player_resize_mode"
        app:drawableStartCompat="@drawable/ic_aspect_ratio" />

</LinearLayout>