<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search"
        android:focusableInTouchMode="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_community"
        android:title="@string/community"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_queue"
        android:title="@string/queue"
        app:showAsAction="never"
        android:visible="false" />

</menu>